# BSUIR

./: .gitignore  README.md
Data structures/: Data structures.sln
Data structures/AVL_Tree/: AVL_Tree.h  AVL_Tree.vcxproj.filters
Data structures/LIst/: LIst.vcxproj  List.h
OAiP/BSUIR_Open2022/: BSUIR_Open2022.sln
OAiP/BSUIR_Open2022/C/: C.vcxproj
OAiP/LAB1/: LAB1.sln
OAiP/lab2/: lab2.sln
OAiP/lab3/: task1_1_saveAllTest.txt  task1_1_saveLastTest.txt  task1_1_validInput.txt
OAiP/lab6/: lab6.sln
Programming/lab2/: lab2.sln
Programming/lab3/: lab3.sln
Programming/lab5/: lab5.sln
Programming/lab6/: lab6.sln
sem1/lab1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
sem1/lab2/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
sem1/lab3/: 2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
sem1/lab4/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
sem1/lab5/: 1.cpp  2.cpp  3_1.cpp  3_2.cpp  3_3.cpp  add_1.cpp  add_2.cpp  add_3.cpp
sem1/lab6/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  required_1.cpp
sem1/lab7/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
sem1/lab8/: 1.cpp  2.cpp
sem4/IGI/: README.md
sem4/M4A/: Lab_11.docx
sem4/Metrology/: README.md
sem5/AVS/: .gitignore
sem5/DatabaseLabs/: README.md
sem6/ISOB/lab2/: CMakeLists.txt  des.h  keys.h  lab2.docx  ports.h
sem6/ISOB/lab2/C/: main  main.cpp
sem6/ISOB/lab2/KDC/: AS.h  TGS.h  keys.h  main.cpp
sem6/ISOB/lab2/SS/: SS.h  main  main.cpp
sem6/ISOB/lab3/dos/: CMakeLists.txt  client.cpp  server.cpp
sem6/ISOB/lab6/: .clang-format  .gitignore  CMakeLists.txt  lab6.docx  main.cpp
sem6/MTran/lab5/: CMakeLists.txt  executer.h  main.cpp
sem6/MTran/lab5/golang/: f.go
(+922 files in other folders)
